test/pass/transform/constantFoldingPoint/test.twge
// OPTION: --print-ast-after --run-only=functionInling,constantFolding
def testListPoint(v): actions {
    addActor(patrol = v);
}

def testPoint(v): actions {
    addActor(patrol = [v,Point(0,0),v]);
}

block init {
    actions {
        testListPoint(v = [Point(1,1),Point(2,2)]);
        testPoint(v = Point(2,2));
        testListPoint(v = [Point(1+1,1)]);
    }
}