test/fail/codegen/typeConversionPoint/test.twge
def testPoint(v): actions {
    addActor(patrol = [v,Point(0,0),v]);
}

block init {
    actions {
        testPoint([Point(1,1),Point(2,2)]);
    }
}